# WindUpBox

./: .readthedocs.yml  MANIFEST.in  Makefile  README.md  README.rst  requirements.txt  scrap.sh  setup.cfg  setup.py  testfile.py
docs/doctrees/: environment.pickle  index.doctree
docs/doctrees/addosoption/: index.doctree
docs/doctrees/advanced/: index.doctree
docs/doctrees/advanced/boxclasscreation/: boxcreationfromscratch.doctree  index.doctree  smalladjustments.doctree
docs/doctrees/basics/: index.doctree
docs/doctrees/basics/download_windows/: index.doctree
docs/doctrees/basics/downloadwindows/: index.doctree
docs/doctrees/basics/howtocreateawindowsbox/: further_command_line_options.doctree  index.doctree  system_customizations.doctree
docs/doctrees/basics/listavailablesystems/: index.doctree
docs/doctrees/basicusage/: further_command_line_options.doctree  index.doctree  system_customizations.doctree
docs/doctrees/boxclasscreation/: boxcreationfromscratch.doctree  index.doctree  smalladjustments.doctree
docs/doctrees/boxclasscreation/boxcreation_steps/: download.doctree  osspecificfiles.doctree  specifyos.doctree
docs/doctrees/functionality/: index.doctree
docs/doctrees/installation/: index.doctree
docs/doctrees/modules/: forensicwinpacker.boxcreator.custom.doctree  forensicwinpacker.helperFunctions.dict.doctree  forensicwinpacker.helperFunctions.doctree  forensicwinpacker.helperFunctions.input.doctree  forensicwinpacker.helperFunctions.jinja.doctree  forensicwinpacker.helperFunctions.web.doctree  forensicwinpacker.logger.doctree  forensicwinpacker.winautounattendAPI.doctree  forensicwinpacker.winconstants.doctree
docs/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/html/_sources/: index.rst.txt
docs/html/_sources/advanced/: index.rst.txt
docs/html/_sources/basics/: index.rst.txt
docs/html/_sources/basicusage/: index.rst.txt
docs/html/addosoption/: index.html
docs/html/advanced/: index.html
docs/html/basics/: index.html
docs/html/basicusage/: further_command_line_options.html  index.html  system_customizations.html
docs/html/boxclasscreation/: boxcreationfromscratch.html  index.html  smalladjustments.html
docs/html/functionality/: index.html
docs/html/installation/: index.html
docs/html/modules/: forensicwinpacker.boxcreator.custom.html  forensicwinpacker.boxcreator.provided.html  forensicwinpacker.cli.html  forensicwinpacker.helperFunctions.hash.html  forensicwinpacker.helperFunctions.html  forensicwinpacker.helperFunctions.input.html  forensicwinpacker.helperFunctions.strings.html  forensicwinpacker.helperFunctions.web.html  forensicwinpacker.logger.html  forensicwinpacker.packerAPI.html  forensicwinpacker.winconstants.html
docsrc/source/: conf.py  index.rst
docsrc/source/basics/: index.rst
docsrc/source/basicusage/: system_customizations.rst
docsrc/source/boxclasscreation/: index.rst
docsrc/source/functionality/: index.rst
docsrc/source/installation/: index.rst
docsrc/source/modules/: forensicwinpacker.boxcreator.rst  forensicwinpacker.helperFunctions.argparse.rst  forensicwinpacker.helperFunctions.jinja.rst  forensicwinpacker.winconstants.rst
src/windupbox/: run.py  setup_logging.py
src/windupbox/boxcreator/: boxcreator.py  selector.py
src/windupbox/cli/: _parse_parameters.py  boxcreate.py  os.py  showversion.py  update.py
src/windupbox/config/: __init__.py
src/windupbox/data/: bcp47.csv  osinfo.db  windows_download_possibilities.json  windows_versions_tested.yml
src/windupbox/helperFunctions/: configlocation.py
src/windupbox/iso/: iso.py
src/windupbox/logger/: logger.py
src/windupbox/osinfo/: constants.py  database.py  database_modifications.py  load_database.py  osinfo.py  windowsinfo.py
src/windupbox/packerAPI/: __init__.py  attributes.py  buildblock.py  commands.py  packerfile.py  postprocessor.py  provisioner.py  source.py  variable.py
src/windupbox/winautounattendAPI/: autounattendfile.py  constants.py  language.py  synchronouscommand.py
(+78 files in other folders)
