[metadata]
name = WindUpBox
author = FKIE
author_email = michael.kuelper@FKIE.fraunhofer.de
description =
version = 0.0.1
url = 
;keywords =
;  linuxforensic
;classifiers =
;  Development Status :: 4 - Beta
;  Intended Audience :: Science/Research
;  Programming Language :: Python :: 3
;  Topic :: Forensic
;license_files =
;  LICENSE.txt

[options]
python_requires = >= 3.9
include_package_data = True
package_dir=
    =src
packages=
    windupbox
    windupbox.config
    windupbox.logger
    windupbox.cli
    windupbox.boxcreator
    windupbox.boxcreator.custom
    windupbox.boxcreator.provided
    windupbox.packerAPI
    windupbox.iso
    windupbox.osinfo
    windupbox.windowswebsitescraper
    windupbox.windowswebsitescraper.isoscraper
    windupbox.windowswebsitescraper.bcp47scraper
    windupbox.winautounattendAPI
    windupbox.winautounattendAPI.common_commands
    windupbox.helperFunctions
    windupbox.helperFunctions.hash
    windupbox.helperFunctions.input
    windupbox.helperFunctions.jinja
    windupbox.helperFunctions.web
    windupbox.helperFunctions.strings
    windupbox.helperFunctions.dict
    windupbox.helperFunctions.argparse
    windupbox.helperFunctions.sqlalchemy

install_requires =
    attrs~=22.1.0
    setuptools~=62.6.0
    Jinja2~=3.1.2
    requests~=2.28.1
    pyquery~=1.4.3
    tqdm~=4.64.0
    prettytable~=3.3.0
    anytree~=2.8.0
    PyYAML~=6.0
    retry~=0.9.2
    pycdlib~=1.13.0

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    windupbox=windupbox.run:run

[options.extras_require]
docs =
    sphinx
    sphinx_rtd_theme
    myst_parser

[build-system]
requires = ["setuptools", "wheel"]

[build_sphinx]
project = 'windupbox'
version = 0.0.1
release = 0
source-dir = docsrc/source
build-dir  = docs
all_files  = 1

;[flake8]
;max-line-length = 160
;per-file-ignores = __init__.py:F401
;exclude =
;    .git,
;    __pycache__
;    htmlcov
;    dist
;    build
;    .tox
;    .hypothesis
;    docs
;    venv
;    src/reproldfauto/data
;
;[coverage:run]
;omit =
;    */data/*